--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-Flask==2.3.2
-Flask-MySQLdb==1.0.1
-pymysql==1.1.0
-requests==2.31.0
-pandas==2.0.3
-numpy==1.25.2
-scikit-learn==1.3.0
-yfinance==0.2.31
-matplotlib==3.7.2
-python-dotenv==1.0.0
-
+Flask==3.0.3
+flask-login==0.6.3
+Flask-MySQLdb==2.0.0
+pandas==2.2.2
+numpy==1.26.4
+Werkzeug==3.0.3
+alpha_vantage==2.3.1
