--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
+# Flask secret key
+SECRET_KEY=your_secret_key
 
+# Database config
+MYSQL_HOST=localhost
+MYSQL_USER=root
+MYSQL_PASSWORD=
+MYSQL_DB=stock_investment
+
+# API Key Alpha Vantage
+ALPHA_VANTAGE_API_KEY=L2LPWH7JB32MG1TY
